# google-photos-dedup

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PLAN.md
docs/design/: efficiency-architecture.md  goal-and-keep-rule.md  google-photos-api-limitation.md
gpdedup/: __init__.py  cache.py  central_dir.py  cli.py  cli_headers.py  concurrency.py  dating.py  drive.py  drive_fetch.py  exif.py  grouping.py  http_range.py  jpeg.py  report.py  sidecar.py
poc/: README.md  make_fixture.py  make_search_url.py  poc_date_probe.py  poc_drive_index.py  poc_drive_list.py  poc_exif_probe.py  poc_local.py  poc_range_probe.py  poc_remote_list.py  poc_report_table.py  range_server.py
tests/: test_cache.py  test_central_dir.py  test_concurrency.py  test_dating.py  test_drive.py  test_drive_fetch.py  test_exif.py  test_grouping.py  test_http_range.py  test_jpeg.py  test_report.py  test_sidecar.py
