[project]
name = "google-photos-dedup"
version = "0.0.1"
description = "Find Picasa-era duplicate photos in a Google Photos Takeout export"
requires-python = ">=3.9"
dependencies = [
    "pillow>=10.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gpdedup"]
