[project]
name = "google-photos-dedup"
version = "0.0.1"
description = "Find Picasa-era duplicate photos in a Google Photos Takeout export"
requires-python = ">=3.9"
dependencies = [
    "pillow>=10.0",
    "requests>=2.32.5",
]

[project.scripts]
gpdedup = "gpdedup.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
# Use a uv-managed CPython (OpenSSL), never Apple's system Python (LibreSSL),
# which makes urllib3 emit NotOpenSSLWarning.
python-preference = "only-managed"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gpdedup"]
